# bgpeek

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  bandit.yaml  compose.override.yaml  compose.yaml  pyproject.toml  tailwind.config.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  security.yml
docs/: api.md  configuration.md  credentials.md  deployment.md
feedback/: 2026-04-12-first-deploy.md
migrations/: 0003.webhooks.sql  0005.credentials.sql  0008.community-labels.sql
scripts/: check.sh  seed-examples.sql
src/bgpeek/: __init__.py  config.py  main.py
src/bgpeek/api/: auth.py  community_labels.py  credentials.py  devices.py  query.py  webhooks.py
src/bgpeek/core/: __init__.py  audit_helpers.py  auth.py  bgp_parser.py  circuit_breaker.py  commands.py  community_labels.py  csrf.py  dns.py  encryption.py  i18n.py  jwt.py  jwt_revoke.py  ldap.py  log_shipper.py  logging.py  oidc.py  output_filter.py  parallel.py  probe.py  query.py  rate_limit.py  response_filter.py  ssh.py  templates.py  time_utils.py  validators.py  webhooks.py
src/bgpeek/db/: audit.py  community_labels.py  credentials.py  devices.py  results.py  users.py  webhooks.py
src/bgpeek/models/: _common.py  audit.py  community_label.py  credential.py  device.py  query.py  user.py  webhook.py
src/bgpeek/static/css/: input.css
src/bgpeek/static/js/: admin-base.js  admin-devices-form.js  admin-users-form.js  api-docs.js  clipboard.js  diff.js  index.js  multi-result.js  theme-init.js  theme.js  ui-handlers.js  user-menu.js
src/bgpeek/templates/: account_settings.html  api_docs.html  base.html  history.html  index.html  login.html  result_page.html
src/bgpeek/templates/admin/: base.html  community_labels_form.html  community_labels_list.html  credentials_form.html  credentials_list.html  devices_form.html  devices_list.html  users_form.html  users_key_shown.html  users_list.html  webhooks_form.html  webhooks_list.html
src/bgpeek/templates/partials/: error.html  header.html  history_rows.html  login_error.html  multi_result.html  result.html  sidebar_footer.html  user_menu.html
src/bgpeek/ui/: __init__.py  admin.py
tests/: conftest.py  test_admin_ui.py  test_auth.py  test_bgp_parser.py  test_brand.py  test_cache.py  test_circuit_breaker.py  test_community_labels.py  test_credentials.py  test_db_audit.py  test_db_devices.py  test_db_users.py  test_dns.py  test_docs_toggle.py  test_health.py  test_history.py  test_i18n.py  test_jwt.py  test_jwt_revoke.py  test_ldap.py  test_links.py  test_log_shipper.py  test_logging.py  test_model_whitespace.py  test_oidc.py  test_output_filter.py  test_parallel.py  test_prefix_cutoff.py  test_probe.py  test_query_integration.py  test_response_filter.py  test_role_filtering.py  test_security_headers.py  test_ssh.py  test_template_helpers.py  test_validators.py  test_webhooks.py
