[project]
name = "bgpeek"
version = "0.1.0"
description = "Open-source looking glass for ISPs and IX operators"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Vladimir Stryy", email = "v.stryy@xeonerix.xyz" },
]
requires-python = ">=3.12"
keywords = ["looking-glass", "bgp", "network", "isp", "noc", "router"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "h11>=0.16.0",                    # CVE fix: HTTP request smuggling
    # Validation & config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Templating
    "jinja2>=3.1.6",                  # CVE fix: sandbox breakouts
    # HTTP client
    "httpx>=0.28.0",
    # Database
    "asyncpg>=0.30.0",
    # Cache
    "redis>=5.2.0",
    # SSH for routers
    "netmiko>=4.5.0",
    # Auth
    "authlib>=1.3.2",                 # OIDC
    "ldap3>=2.9.1",                   # LDAP
    "pyjwt>=2.12.0",                  # CVE fix: crit header bypass
    "passlib[argon2]>=1.7.4",         # password hashing
    # Logging (structured)
    "structlog>=24.4.0",
    # Crypto
    "cryptography>=46.0.6",           # CVE fix: 6 CVE
]

[project.optional-dependencies]
dev = [
    # Test
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "playwright>=1.49.0",             # E2E HTML/HTMX tests
    # Lint / format / types
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    # Security
    "pip-audit>=2.7.3",
    "bandit>=1.8.0",
    # Pre-commit
    "pre-commit>=4.0.0",
]

[project.scripts]
bgpeek = "bgpeek.main:run"

[project.urls]
Homepage = "https://github.com/xeonerix/bgpeek"
Repository = "https://github.com/xeonerix/bgpeek"
Issues = "https://github.com/xeonerix/bgpeek/issues"

# ===== uv =====
[tool.uv]
package = true

# ===== build =====
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bgpeek"]

# ===== ruff =====
[tool.ruff]
src = ["src", "tests"]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle
    "F",           # pyflakes
    "I",           # isort
    "B",           # bugbear
    "C4",          # comprehensions
    "UP",          # pyupgrade
    "N",           # pep8-naming
    "S",           # bandit
    "ASYNC",       # flake8-async
    "RET",         # return
    "SIM",         # simplify
    "PT",          # pytest-style
    "T20",         # no print
]
ignore = [
    "E501",        # line too long (handled by formatter)
    "S101",        # asserts in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ===== mypy =====
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["tests/e2e"]

# ===== pytest =====
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
